2006-07-13  Dalibor Topic  <robilad@kaffe.org>

	Fixed build on powerpc-linux.

	* configure.ac: Put -mregnames into KAFFE_CCASFLAGS.

	* kaffe/kaffevm/jit/Makefile.am,
	kaffe/kaffevm/jit3/Makefile.am (AM_CCASFLAGS):
	Added KAFFE_CCASFLAGS.
	
2006-07-11  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/java/awt/Component.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/Container.java:
	further focus traversal improvments from CP

2006-07-11  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (REGEN_FORWARD): Removed.

	* config/Makefile.am (EXTRA_DIST): Removed 
	regen-forward and stamp-h1.in.

	* config/regen-forward,
	config/stamp-h1.in: Removed.

2006-07-11  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_CONFIG_LINKS) Link icode.h,
	jit.def and tromplines.S into kaffe/kaffevm/jit* 
	directory. Don't AC_SUBST KAFFEVM_JIT_DEF, 
	KAFFEVM_ICODE_H and KAFFEVM_TRAMPOLINES_S.

	* kaffe/kaffevm/jit/Makefile.am,
	kaffe/kaffevm/jit3/Makefile.am:
	Cleaned up from regen-forward leftovers.

2006-07-11  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_CONFIG_LINKS) Link md.c into
	kaffevm directory.

	* kaffe/kaffevm/Makefile.am (libkaffevm_la_GEN_SRCS, md.c, stamp-h01,
	DISTCLEANFILES, dist-hook) Removed.
	(nodist_libkaffevm_la_SOURCES) List md.c directly.

2006-07-11  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_CONFIG_LINKS) Link files from kaffevm
	into kaffeh directory to compile them there as well. This
	should really become a shared library eventually.

        * kaffe/kaffeh/Makefile.am (GEN_SRCS, DISTCLEANFILES, 
	$(GEN_SRCS), dist-hook) Removed. 
	(nodist_kaffeh_SOURCES) List the linked over sources.

2006-07-11  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/java/awt/Component.java:
	implemented and updated some listener accessors
	
2006-07-09  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Only link callKaffeException.h if we