@@ -18,7 +18,8 @@ AM_CPPFLAGS = \
 libxawt_la_CFLAGS = \
 	$(CFLAGS_PG) \
 	$(X_CFLAGS) \
-	$(XI18N_CFLAGS)
+	$(XI18N_CFLAGS) \
+	$(KAFFE_CFLAGS)
 
 libxawt_la_LDFLAGS = \
 	$(KLIBFLAGS) \
